force-app/main/default/objects/Expenses_Line_Item__c/Expenses_Line_Item__c.object-meta.xml
<CustomObject>
    <label>Expenses Line Item</label>
    <nameField>
        <displayFormat>EXP DAY - {00000}</displayFormat>
        <label>Expenses_Line_Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Expenses Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>