force-app/main/default/objects/Expenses_Line_Item__c/fields/Accommodation_Type__c.field-meta.xml
<CustomField>
    <fullName>Accommodation_Type__c</fullName>
    <label>Accommodation Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Single Occupancy</fullName>
            </value>
            <value>
                <fullName>Double Occupancy</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>