force-app/main/default/objects/Expenses_Line_Item__c/fields/DA_Limit__c.field-meta.xml
<CustomField>
    <fullName>DA_Limit__c</fullName>
    <label>DA Limit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>