force-app/main/default/objects/Expenses_Line_Item__c/fields/Daily_Log__c.field-meta.xml
<CustomField>
    <fullName>Daily_Log__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Daily Log</label>
    <referenceTo>Daily_Log__c</referenceTo>
    <relationshipLabel>Expense Line Items</relationshipLabel>
    <relationshipName>Expense_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>