force-app/main/default/objects/Expenses_Line_Item__c/fields/Expense__c.field-meta.xml
<CustomField>
    <fullName>Expense__c</fullName>
    <label>Expense</label>
    <referenceTo>Expense__c</referenceTo>
    <relationshipName>Expenses_line_items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>