force-app/main/default/objects/Expenses_Line_Item__c/fields/Food_Type__c.field-meta.xml
<CustomField>
    <fullName>Food_Type__c</fullName>
    <label>Food Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Food_Type</valueSetName>
    </valueSet>
</CustomField>