force-app/main/default/objects/Expenses_Line_Item__c/fields/Is_Updated__c.field-meta.xml
<CustomField>
    <fullName>Is_Updated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Updated</label>
    <type>Checkbox</type>
</CustomField>