force-app/main/default/objects/Expenses_Line_Item__c/fields/Local_Conveyance_Limit__c.field-meta.xml
<CustomField>
    <fullName>Local_Conveyance_Limit__c</fullName>
    <label>Local Conveyance Limit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>