force-app/main/default/objects/Expenses_Line_Item__c/fields/localId__c.field-meta.xml
<CustomField>
    <fullName>localId__c</fullName>
    <label>localId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>