force-app/main/default/objects/Expenses_Line_Item__c/fields/Lodging_Food_Expense_Limit__c.field-meta.xml
<CustomField>
    <fullName>Lodging_Food_Expense_Limit__c</fullName>
    <label>Lodging + Food Expense Limit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>