force-app/main/default/objects/Expenses_Line_Item__c/fields/lodging_Limit__c.field-meta.xml
<CustomField>
    <fullName>lodging_Limit__c</fullName>
    <label>Lodging Limit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>