force-app/main/default/objects/Expenses_Line_Item__c/fields/OwnerId__c.field-meta.xml
<CustomField>
    <fullName>OwnerId__c</fullName>
    <formula>Expense__r.OwnerId</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>OwnerId</label>
    <type>Text</type>
</CustomField>