force-app/main/default/objects/Expenses_Line_Item__c/fields/Submitted_Amount__c.field-meta.xml
<CustomField>
    <fullName>Submitted_Amount__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Submitted Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>