force-app/main/default/objects/Expenses_Line_Item__c/fields/System_Calculated_Amount__c.field-meta.xml
<CustomField>
    <fullName>System_Calculated_Amount__c</fullName>
    <label>System Calculated Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>