force-app/main/default/objects/Expenses_Line_Item__c/fields/TA_Limit__c.field-meta.xml
<CustomField>
    <fullName>TA_Limit__c</fullName>
    <label>TA Limit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>