force-app/main/default/objects/Expenses_Line_Item__c/fields/Total_Distance_Calculated_by_ODM_Reading__c.field-meta.xml
<CustomField>
    <fullName>Total_Distance_Calculated_by_ODM_Reading__c</fullName>
    <label>Total Distance Calculated by ODM Reading</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>