force-app/main/default/objects/Expenses_Line_Item__c/fields/Total_KM__c.field-meta.xml
<CustomField>
    <fullName>Total_KM__c</fullName>
    <label>KM Travelled (Manual)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>