force-app/main/default/objects/Expenses_Line_Item__c/fields/Travel_Mode__c.field-meta.xml
<CustomField>
    <fullName>Travel_Mode__c</fullName>
    <label>Travel Mode</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Mode_of_Transport</valueSetName>
    </valueSet>
</CustomField>