force-app/main/default/objects/Expenses_Line_Item__c/fields/Working_Hours__c.field-meta.xml
<CustomField>
    <fullName>Working_Hours__c</fullName>
    <label>Working Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>